<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_primary"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="171dp" />

    <ImageView
        android:id="@+id/birhaberLogo"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_newspaper_24" />

    <TextView
        android:id="@+id/twBirHaber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/BirHaber"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/birhaberLogo"
        app:layout_constraintTop_toBottomOf="@+id/birhaberLogo" />

    <TextView
        android:id="@+id/twSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slogan"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/twBirHaber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/twBirHaber"
        app:layout_constraintTop_toBottomOf="@+id/twBirHaber" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/twUyeOlBaslik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Hoşgeldiniz!"
                android:textColor="@color/my_primary"
                android:textSize="36dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:drawableLeft="@drawable/email_vector_kirmizi_32"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/epostaHint"
                android:inputType="textEmailAddress"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="@+id/twUyeOlBaslik"
                app:layout_constraintStart_toStartOf="@+id/twUyeOlBaslik"
                app:layout_constraintTop_toBottomOf="@+id/twUyeOlBaslik" />

            <EditText
                android:id="@+id/etSifre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:drawableLeft="@drawable/sifre_vector_kirmizi_32"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/sifreHint"
                android:inputType="textPassword"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <TextView
                android:id="@+id/twSifremiUnuttum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sifremiUnuttum"
                android:textColor="@color/my_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etSifre" />

            <Button
                android:id="@+id/btnGirisYap"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/kirmizi_button_shape"
                android:text="@string/btnGirisYap"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/etSifre"
                app:layout_constraintStart_toStartOf="@+id/etSifre"
                app:layout_constraintTop_toBottomOf="@+id/twSifremiUnuttum" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/btnGirisYap"
                app:layout_constraintStart_toStartOf="@+id/btnGirisYap"
                app:layout_constraintTop_toBottomOf="@+id/btnGirisYap">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/hesabınızYokMu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/twUyeOl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/uyeOl"
                    android:textColor="@color/my_primary"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>